<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_Register"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btnmainbg"
        android:onClick="btnRegisterOnClick"
        android:text="@string/register_movie"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="add"
        app:iconTintMode="screen"
        app:layout_constraintEnd_toEndOf="@+id/btn_Display"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Display"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Search"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btnmainbg"
        android:onClick="btnSearchOnClick"
        android:text="@string/search"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/btn_Ratings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Ratings"
        app:layout_constraintTop_toBottomOf="@+id/btn_Edit" />

    <Button
        android:id="@+id/btn_Edit"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btnmainbg"
        android:onClick="btnEditOnClick"
        android:text="@string/edit_movies"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/btn_Search"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Search"
        app:layout_constraintTop_toBottomOf="@+id/btn_Favourites" />

    <Button
        android:id="@+id/btn_Display"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnmainbg"
        android:onClick="btnDisplayOnClick"
        android:text="@string/display_movies"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/btn_Favourites"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Favourites"
        app:layout_constraintTop_toBottomOf="@+id/btn_Register" />

    <Button
        android:id="@+id/btn_Favourites"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btnmainbg"
        android:onClick="btnFavouritesOnClick"
        android:text="@string/favourites"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/btn_Edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_Edit"
        app:layout_constraintTop_toBottomOf="@+id/btn_Display" />


    <Button
        android:id="@+id/btn_Ratings"
        android:layout_width="278dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btnmainbg"
        android:onClick="btnRatingOnClick"
        android:text="@string/ratings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Search" />

</androidx.constraintlayout.widget.ConstraintLayout>